fix menu z-index

--- a/src/index.css
+++ b/src/index.css
@@ -175,10 +175,15 @@ input[type="radio"].visually-hidden {
 
 .header {
   position: fixed;
-  z-index: 100;
+  z-index: 150;
 
   width: 100%;
-  height: 125px;
+
+  /* height: 125px; */
+
+  /* background-image: linear-gradient(to bottom, white, rgba(255, 255, 255, 0)); */
+
+  background-color: #ffffff;
 }
 
 .header__wrapper {
@@ -866,12 +871,12 @@ input[type="radio"].visually-hidden {
   }
 
   .menu__list--header {
-    margin: 24px;
+    margin: 24px 10px;
   }
 
   .menu__link--header {
     font-size: 15px;
-    margin: 10px;
+    margin: 9px;
   }
 
   .header__btn {
